--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,376 @@
 /* Write your global CSS here */
 /* Note that you don't need to do Normalization as react-bootstrap does it for us */
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+}
 .App {
   height: 100vh;
+}
+
+.main-home-div {
+  background-color: #ffffff;
+}
+
+.home-items-container {
+  margin-top: 20px;
+  background-color: white;
+  border-radius: 3px;
+}
+
+.carousel-img {
+  object-fit: cover;
+}
+
+/* .featured-section {
+  background-color: black;
+  padding: 10px;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+} */
+.card-div {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+  align-items: center;
+  /* background-color: red; */
+}
+
+/* Featured Cards */
+
+/* a {
+  text-decoration: none;
+}
+
+@media screen and (min-width: 320px) {
+  .product-card {
+    width: 20vw;
+
+    position: relative;
+    box-shadow: 0 2px 7px #dfdfdf;
+    margin: 50px auto;
+    background: #fafafa;
+  }
+}
+
+@media screen and (min-width: 641px) {
+  .product-card {
+    width: 25vw;
+    position: relative;
+    box-shadow: 0 2px 7px #dfdfdf;
+    margin: 50px auto;
+    background: #fafafa;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .product-card {
+    width: 380px;
+    position: relative;
+    box-shadow: 0 2px 7px #dfdfdf;
+    margin: 50px auto;
+    background: #fafafa;
+  }
+}
+
+.product-card {
+  width: 25vw;
+  position: relative;
+  box-shadow: 0 2px 7px #dfdfdf;
+  margin: 50px auto;
+  background: #fafafa;
+}
+
+.badge {
+  position: absolute;
+  left: 0;
+  top: 20px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 700;
+  background: red;
+  color: #fff;
+  padding: 3px 10px;
+}
+
+.product-tumb {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  padding: 50px;
+  background: #f0f0f0;
+}
+
+.product-tumb img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.product-details {
+  padding: 30px;
+}
+
+.product-catagory {
+  display: block;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ccc;
+  margin-bottom: 18px;
+}
+
+.product-details h5 a {
+  font-weight: 500;
+  display: block;
+  margin-bottom: 18px;
+  text-transform: uppercase;
+  color: #363636;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.product-details h5 a:hover {
+  color: #fbb72c;
+}
+
+.product-details p {
+  font-size: 15px;
+  line-height: 22px;
+  margin-bottom: 18px;
+  color: #999;
+}
+
+.product-bottom-details {
+  overflow: hidden;
+  border-top: 1px solid #eee;
+  padding-top: 20px;
+}
+
+.product-bottom-details div {
+  float: left;
+  width: 50%;
+}
+
+.product-price {
+  font-size: 18px;
+  color: #fbb72c;
+  font-weight: 600;
+}
+
+.product-price small {
+  font-size: 80%;
+  font-weight: 400;
+  text-decoration: line-through;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.product-links {
+  text-align: right;
+}
+
+.product-links a {
+  display: inline-block;
+  margin-left: 5px;
+  color: #e1e1e1;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+.product-links a:hover {
+  color: #fbb72c;
+} */
+
+/* Category Hero Page */
+
+.category-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+.category {
+  padding-top: 50px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.single-category {
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  margin: 3px;
+  align-items: center;
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.single-category img {
+  height: 3-00px;
+}
+
+.category-comp-titles {
+  position: absolute;
+  top: 107px;
+  left: 50px;
+  color: white;
+}
+/* Register Page */
+.register-container {
+  width: 100%;
+  height: 100vh;
+  /* background: linear-gradient(
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url("https://images.pexels.com/photos/6984661/pexels-photo-6984661.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940")
+      center; */
+  background-color: teal;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.register-wrapper {
+  width: 40%;
+  padding: 20px;
+  background-color: white;
+}
+
+.register-wrapper title {
+  font-size: 24px;
+  font-weight: 300;
+}
+
+.register-wrapper form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.register-wrapper input {
+  flex: 1;
+  min-width: 40%;
+  margin: 20px 10px 0px 0px;
+  padding: 10px;
+}
+
+.register-wrapper agreement {
+  font-size: 12px;
+  margin: 20px 0px;
+}
+
+.register-wrapper button {
+  width: 40%;
+  border: none;
+  padding: 15px 20px;
+  background-color: teal;
+  color: white;
+  cursor: pointer;
+}
+
+/* Login Page */
+
+.login-container {
+  width: 100%;
+  height: 100vh;
+  /* background: linear-gradient(
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url("https://images.pexels.com/photos/6984650/pexels-photo-6984650.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940")
+      center; */
+  background-color: teal;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-container wrapper {
+  width: 25%;
+  padding: 20px;
+  background-color: white;
+}
+
+.login-container title {
+  font-size: 24px;
+  font-weight: 300;
+}
+
+.login-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-container input {
+  flex: 1;
+  min-width: 40%;
+  margin: 10px 0;
+  padding: 10px;
+}
+.login-container button {
+  width: 40%;
+  border: none;
+  padding: 15px 20px;
+  background-color: teal;
+  color: white;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.login-container a {
+  margin: 5px 0px;
+  font-size: 12px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+/* productPage */
+
+.product-container {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  background-color: teal;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.product-image img {
+  width: 300px;
+  /* overflow: hidden; */
+}
+
+.product-details h1 {
+  color: white;
+}
+
+.product-details p {
+  color: white;
+}
+
+.product-details a {
+  overflow: hidden;
+  border-top: 1px solid #eee;
+  padding-top: 20px;
 }
