--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,46 @@ body {
   background-color: #ffffff;
 }
 
-.home-items-container {
-  margin-top: 20px;
-  background-color: white;
-  border-radius: 3px;
+/* home comps media query */
+
+@media (min-width: 320px) {
+  .home-items-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-top: 150px;
+    margin-bottom: 150px;
+    /* background-color: rgb(49, 49, 59); */
+    width: 100%;
+    border-radius: 3px;
+  }
+}
+
+@media (min-width: 650px) {
+  .home-items-container {
+    padding-right: 75px;
+    padding-left: 75px;
+    margin-top: 150px;
+    margin-bottom: 150px;
+    /* background-color: red; */
+    width: 100%;
+    border-radius: 3px;
+  }
+}
+
+@media (min-width: 1025px) {
+  .home-items-container {
+    padding-right: 200px;
+    padding-left: 200px;
+    margin-top: 150px;
+    margin-bottom: 150px;
+    /* background-color: purple; */
+    width: 100%;
+    border-radius: 3px;
+  }
 }
 
 .carousel-img {
@@ -37,6 +73,7 @@ body {
   align-items: center;
   width: 100%;
 } */
+
 .card-div {
   display: flex;
   width: 100%;
@@ -46,152 +83,6 @@ body {
   align-items: center;
   /* background-color: red; */
 }
-
-/* Featured Cards */
-
-/* a {
-  text-decoration: none;
-}
-
-@media screen and (min-width: 320px) {
-  .product-card {
-    width: 20vw;
-
-    position: relative;
-    box-shadow: 0 2px 7px #dfdfdf;
-    margin: 50px auto;
-    background: #fafafa;
-  }
-}
-
-@media screen and (min-width: 641px) {
-  .product-card {
-    width: 25vw;
-    position: relative;
-    box-shadow: 0 2px 7px #dfdfdf;
-    margin: 50px auto;
-    background: #fafafa;
-  }
-}
-
-@media screen and (min-width: 1025px) {
-  .product-card {
-    width: 380px;
-    position: relative;
-    box-shadow: 0 2px 7px #dfdfdf;
-    margin: 50px auto;
-    background: #fafafa;
-  }
-}
-
-.product-card {
-  width: 25vw;
-  position: relative;
-  box-shadow: 0 2px 7px #dfdfdf;
-  margin: 50px auto;
-  background: #fafafa;
-}
-
-.badge {
-  position: absolute;
-  left: 0;
-  top: 20px;
-  text-transform: uppercase;
-  font-size: 13px;
-  font-weight: 700;
-  background: red;
-  color: #fff;
-  padding: 3px 10px;
-}
-
-.product-tumb {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 300px;
-  padding: 50px;
-  background: #f0f0f0;
-}
-
-.product-tumb img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.product-details {
-  padding: 30px;
-}
-
-.product-catagory {
-  display: block;
-  font-size: 12px;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #ccc;
-  margin-bottom: 18px;
-}
-
-.product-details h5 a {
-  font-weight: 500;
-  display: block;
-  margin-bottom: 18px;
-  text-transform: uppercase;
-  color: #363636;
-  text-decoration: none;
-  transition: 0.3s;
-}
-
-.product-details h5 a:hover {
-  color: #fbb72c;
-}
-
-.product-details p {
-  font-size: 15px;
-  line-height: 22px;
-  margin-bottom: 18px;
-  color: #999;
-}
-
-.product-bottom-details {
-  overflow: hidden;
-  border-top: 1px solid #eee;
-  padding-top: 20px;
-}
-
-.product-bottom-details div {
-  float: left;
-  width: 50%;
-}
-
-.product-price {
-  font-size: 18px;
-  color: #fbb72c;
-  font-weight: 600;
-}
-
-.product-price small {
-  font-size: 80%;
-  font-weight: 400;
-  text-decoration: line-through;
-  display: inline-block;
-  margin-right: 5px;
-}
-
-.product-links {
-  text-align: right;
-}
-
-.product-links a {
-  display: inline-block;
-  margin-left: 5px;
-  color: #e1e1e1;
-  transition: 0.3s;
-  font-size: 17px;
-}
-
-.product-links a:hover {
-  color: #fbb72c;
-} */
 
 /* Category Hero Page */
 
@@ -206,7 +97,7 @@ body {
 }
 .category {
   padding-top: 50px;
-
+  /* background-color: black; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -214,24 +105,29 @@ body {
 }
 
 .single-category {
-  width: 200px;
+  background-color: orange;
+  border-radius: 50%;
+  width: 170px;
+  height: 170px;
   display: flex;
   justify-content: center;
-  margin: 3px;
+  margin: 10px;
   align-items: center;
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
+  transition: all 0.2s ease-in-out;
 }
 
-.single-category img {
-  height: 3-00px;
+.single-category:hover {
+  transform: scale(1.1);
+  box-shadow: 2px 2px 60px -10px black;
 }
 
 .category-comp-titles {
+  list-style: none;
   position: absolute;
-  top: 107px;
-  left: 50px;
+  top: 70px;
   color: white;
 }
 /* Register Page */
@@ -347,30 +243,225 @@ body {
 
 /* productPage */
 
-.product-container {
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  background-color: teal;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.product-image img {
-  width: 300px;
-  /* overflow: hidden; */
-}
-
 .product-details h1 {
-  color: white;
+  color: black;
 }
 
 .product-details p {
-  color: white;
+  color: black;
 }
 
 .product-details a {
   overflow: hidden;
   border-top: 1px solid #eee;
   padding-top: 20px;
+}
+@media screen and (min-width: 320px) {
+  .product-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    /* background-color: teal; */
+    justify-content: center;
+    align-items: center;
+  }
+
+  .product-image img {
+    width: 300px;
+    /* overflow: hidden; */
+  }
+}
+@media screen and (min-width: 641px) {
+  .product-container {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    /* background-color: teal; */
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .product-image img {
+    width: 300px;
+    /* overflow: hidden; */
+  }
+}
+@media screen and (min-width: 1025px) {
+  .product-container {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    /* background-color: teal; */
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .product-image img {
+    width: 300px;
+    /* overflow: hidden; */
+  }
+}
+
+/* Shopping Cart */
+
+@media screen and (min-width: 320px) {
+  .main-main-shopping-cart-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .shopping-cart-total {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: teal; */
+    width: 100%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+  .main-shopping-cart-container {
+    margin: 50px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .shopping-cart-container {
+    background-color: white;
+    padding: 20px;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  .shopping-cart-item-img img {
+    max-width: 100%;
+    max-height: 100%;
+    margin-bottom: 20px;
+  }
+
+  .shopping-cart-item-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 641px) {
+  .main-main-shopping-cart-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .shopping-cart-total {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: teal; */
+    width: 100%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+
+  .main-shopping-cart-container {
+    margin: 0px;
+  }
+
+  .shopping-cart-container {
+    background-color: white;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+    /* flex-wrap: wrap; */
+    /* height: 200px; */
+  }
+
+  .shopping-cart-item-img {
+    width: 100%;
+    height: 300px;
+  }
+
+  .shopping-cart-item-img img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .shopping-cart-item-details {
+    /* background-color: blueviolet; */
+    width: 700px;
+    margin-right: 100px;
+  }
+}
+@media screen and (min-width: 1025px) {
+  .main-main-shopping-cart-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .shopping-cart-total {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: teal; */
+    width: 100%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+  .main-shopping-cart-container {
+    margin: 0px;
+  }
+
+  .shopping-cart-container {
+    background-color: white;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+    /* flex-wrap: wrap; */
+    /* height: 200px; */
+  }
+
+  .shopping-cart-item-img {
+    width: 100%;
+    height: 300px;
+  }
+
+  .shopping-cart-item-img img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .shopping-cart-item-details {
+    /* background-color: blueviolet; */
+    width: 700px;
+    margin-right: 100px;
+  }
+}
+
+/* .shopping-cart-icon {
+  color: black;
+} */
+
+.nav-bar-cart-icon a {
+  color: blue;
+  font-size: large;
 }
