added 404 page and some minor changes

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,8 @@
     height: 100vh;
     background-repeat: no-repeat;
     overflow: hidden;
+    background-attachment: fixed;
+    position: relative;
   }
   .my-hero-div h1 {
     font-size: 5rem;
@@ -441,6 +443,7 @@
   }
 
   .shopping-cart-container {
+    border-bottom: 1px solid rgb(187, 187, 187);
     background-color: white;
     padding: 20px;
     /* display: flex;
@@ -448,8 +451,7 @@
     justify-content: center;
     align-items: center; */
 
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 10px;
   }
   .shopping-cart-item-img img {
     max-width: 100%;
@@ -574,4 +576,22 @@
 .nav-bar-cart-icon a {
   color: blue;
   font-size: large;
+}
+
+/* not found page */
+.not-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: rgb(68, 68, 68);
+  min-height: 80vh;
+}
+.not-found h2 {
+  font-weight: bolder;
+  color: orange;
+  font-size: 55px;
+}
+.not-found p {
+  font-size: 20px;
 }
