some minor changes

--- a/src/App.css
+++ b/src/App.css
@@ -17,88 +17,6 @@
   background-color: #ffffff;
 }
 
-@media (min-width: 320px) {
-  .my-hero-div {
-    background-image: url("https://images.unsplash.com/photo-1515886657613-9f3515b0c78f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1020&q=80");
-    background-position: top;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    background-attachment: fixed;
-    position: relative;
-  }
-  .my-hero-div h1 {
-    font-size: 5rem;
-    text-align: center;
-    height: 7vh;
-    line-height: 1vh;
-    color: #fcedd8;
-    /* background: #d52e3f; */
-    font-family: "Niconne", cursive;
-    font-weight: 700;
-    text-shadow: 5px 5px 0px #eb452b, 10px 10px 0px #efa032,
-      15px 15px 0px #46b59b;
-  }
-}
-
-@media (min-width: 650px) {
-  .my-hero-div {
-    background-image: url("https://images.unsplash.com/photo-1627483297929-37f416fec7cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 79vh;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    background-attachment: fixed;
-    position: relative;
-  }
-
-  .my-hero-div h1 {
-    font-size: 7rem;
-    text-align: center;
-    height: 7vh;
-    line-height: 1vh;
-    color: #fcedd8;
-    /* background: #d52e3f; */
-    font-family: "Niconne", cursive;
-    font-weight: 700;
-    text-shadow: 5px 5px 0px #eb452b, 10px 10px 0px #efa032,
-      15px 15px 0px #46b59b;
-  }
-}
-@media (min-width: 1025px) {
-  .my-hero-div {
-    background-image: url("https://images.unsplash.com/photo-1627483298235-f3bac2567c1c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
-    display: flex;
-    flex-direction: column;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    background-attachment: fixed;
-    position: relative;
-  }
-  .my-hero-div h1 {
-    font-size: 12rem;
-    text-align: center;
-    height: 7vh;
-    line-height: 1vh;
-    color: #fcedd8;
-    /* background: #d52e3f; */
-    font-family: "Niconne", cursive;
-    font-weight: 700;
-    text-shadow: 5px 5px 0px #eb452b, 10px 10px 0px #efa032,
-      15px 15px 0px #46b59b;
-  }
-}
-
 /* .my-hero-div img {
   object-fit: cover;
   width: 100%;
@@ -147,9 +65,9 @@
   }
 }
 
-.carousel-img {
+/* .carousel-img {
   object-fit: cover;
-}
+} */
 
 .card-div {
   display: flex;
@@ -163,50 +81,6 @@
 
 /* Category Hero Page */
 
-.category-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
-  padding-top: 120px;
-  padding-bottom: 300px;
-}
-.category {
-  padding-top: 50px;
-  /* background-color: black; */
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.single-category {
-  background-color: orange;
-  border-radius: 50%;
-  width: 170px;
-  height: 170px;
-  display: flex;
-  justify-content: center;
-  margin: 10px;
-  align-items: center;
-  position: relative;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  transition: all 0.2s ease-in-out;
-}
-
-.single-category:hover {
-  transform: scale(1.1);
-  box-shadow: 2px 2px 60px -10px black;
-}
-
-.category-comp-titles {
-  list-style: none;
-  position: absolute;
-  top: 70px;
-  color: white;
-}
 /* Register Page */
 .register-container {
   width: 100%;
@@ -355,219 +229,7 @@
 
 /* productPage */
 
-.product-details h1 {
-  color: black;
-}
-
-.product-details p {
-  color: black;
-}
-
-.product-details a {
-  overflow: hidden;
-  border-top: 1px solid #eee;
-  padding-top: 20px;
-}
-@media screen and (min-width: 320px) {
-  .product-container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    /* background-color: teal; */
-    justify-content: center;
-    align-items: center;
-  }
-
-  .product-image img {
-    width: 300px;
-    /* overflow: hidden; */
-  }
-}
-@media screen and (min-width: 641px) {
-  .product-container {
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    /* background-color: teal; */
-    justify-content: space-around;
-    align-items: center;
-  }
-
-  .product-image img {
-    width: 300px;
-    /* overflow: hidden; */
-  }
-}
-@media screen and (min-width: 1025px) {
-  .product-container {
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    /* background-color: teal; */
-    justify-content: space-around;
-    align-items: center;
-  }
-
-  .product-image img {
-    width: 300px;
-    /* overflow: hidden; */
-  }
-}
-
 /* Shopping Cart */
-
-@media screen and (min-width: 320px) {
-  .main-main-shopping-cart-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .shopping-cart-total {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-
-    width: 100%;
-    margin-top: 300px;
-    margin-bottom: 300px;
-  }
-  .main-shopping-cart-container {
-    margin: 50px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .shopping-cart-container {
-    border-bottom: 1px solid rgb(187, 187, 187);
-    background-color: white;
-    padding: 20px;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
-
-    margin-top: 10px;
-  }
-  .shopping-cart-item-img img {
-    max-width: 100%;
-    max-height: 100%;
-    margin-bottom: 20px;
-  }
-
-  .shopping-cart-item-details {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
-@media screen and (min-width: 641px) {
-  .main-main-shopping-cart-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .shopping-cart-total {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    /* background-color: teal; */
-    width: 100%;
-    margin-top: 300px;
-    margin-bottom: 300px;
-  }
-
-  .main-shopping-cart-container {
-    margin: 0px;
-  }
-
-  .shopping-cart-container {
-    background-color: white;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 30px;
-    /* flex-wrap: wrap; */
-    /* height: 200px; */
-  }
-
-  .shopping-cart-item-img {
-    width: 100%;
-    height: 300px;
-  }
-
-  .shopping-cart-item-img img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .shopping-cart-item-details {
-    /* background-color: blueviolet; */
-    width: 700px;
-    margin-right: 100px;
-  }
-}
-@media screen and (min-width: 1025px) {
-  .main-main-shopping-cart-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .shopping-cart-total {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    /* background-color: teal; */
-    width: 100%;
-    margin-top: 300px;
-    margin-bottom: 300px;
-  }
-  .main-shopping-cart-container {
-    margin: 0px;
-  }
-
-  .shopping-cart-container {
-    background-color: white;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 30px;
-    /* flex-wrap: wrap; */
-    /* height: 200px; */
-  }
-
-  .shopping-cart-item-img {
-    width: 100%;
-    height: 300px;
-  }
-
-  .shopping-cart-item-img img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .shopping-cart-item-details {
-    /* background-color: blueviolet; */
-    width: 700px;
-    margin-right: 100px;
-  }
-}
 
 /* .shopping-cart-icon {
   color: black;
