--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
   height: 100vh;
 } */
 
+.carousel-wrapper {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 0 20px;
+}
+
 /* home comps media query */
 
 @media (min-width: 320px) {
@@ -33,7 +39,7 @@
     align-items: center;
     padding-right: 10px;
     padding-left: 10px;
-    margin-top: 150px;
+    margin-top: 50px;
     margin-bottom: 150px;
     /* background-color: rgb(49, 49, 59); */
     width: 100%;
@@ -45,7 +51,7 @@
   .home-items-container {
     padding-right: 75px;
     padding-left: 75px;
-    margin-top: 150px;
+    margin-top: 50px;
     margin-bottom: 150px;
     /* background-color: red; */
     width: 100%;
@@ -57,7 +63,7 @@
   .home-items-container {
     padding-right: 200px;
     padding-left: 200px;
-    margin-top: 150px;
+    margin-top: 50px;
     margin-bottom: 150px;
     /* background-color: purple; */
     width: 100%;
@@ -256,4 +262,61 @@
 }
 .not-found p {
   font-size: 20px;
+}
+
+/* devider */
+.divider {
+  /* minor cosmetics */
+  display: table;
+  font-size: 24px;
+  text-align: center;
+  width: 75%; /* divider width */
+  margin: 40px auto; /* spacing above/below */
+}
+.divider span {
+  display: table-cell;
+  position: relative;
+}
+.divider span:first-child,
+.divider span:last-child {
+  width: 50%;
+  top: 13px; /* adjust vertical align */
+  -moz-background-size: 100% 2px; /* line width */
+  background-size: 100% 2px; /* line width */
+  background-position: 0 0, 0 100%;
+  background-repeat: no-repeat;
+}
+.divider span:first-child {
+  /* color changes in here */
+  background-image: -webkit-gradient(
+    linear,
+    0 0,
+    0 100%,
+    from(transparent),
+    to(#000)
+  );
+  background-image: -webkit-linear-gradient(180deg, transparent, #000);
+  background-image: -moz-linear-gradient(180deg, transparent, #000);
+  background-image: -o-linear-gradient(180deg, transparent, #000);
+  background-image: linear-gradient(90deg, transparent, #000);
+}
+.divider span:nth-child(2) {
+  color: #000;
+  padding: 0px 5px;
+  width: auto;
+  white-space: nowrap;
+}
+.divider span:last-child {
+  /* color changes in here */
+  background-image: -webkit-gradient(
+    linear,
+    0 0,
+    0 100%,
+    from(#000),
+    to(transparent)
+  );
+  background-image: -webkit-linear-gradient(180deg, #000, transparent);
+  background-image: -moz-linear-gradient(180deg, #000, transparent);
+  background-image: -o-linear-gradient(180deg, #000, transparent);
+  background-image: linear-gradient(90deg, #000, transparent);
 }
