--- a/src/ProductCard.css
+++ b/src/ProductCard.css
@@ -17,8 +17,11 @@ a {
 //////////
 ////////////// */
 @media screen and (min-width: 320px) {
+  a {
+    font-size: 14px;
+  }
   .product-card {
-    width: 380px;
+    width: 180px;
     position: relative;
     box-shadow: 0 2px 7px #dfdfdf;
     margin: 50px auto;
@@ -41,18 +44,19 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 300px;
+    height: 200px;
     padding: 50px;
-    background: #f0f0f0;
+    background: white;
   }
 
   .product-tumb img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 200%;
+    max-height: 200%;
   }
 
   .product-details {
     padding: 30px;
+    height: 210px;
   }
 
   .product-catagory {
@@ -165,7 +169,7 @@ a {
     justify-content: center;
     height: 200px;
     padding: 5px;
-    background: #f0f0f0;
+    background: white;
   }
 
   .product-tumb img {
@@ -287,7 +291,7 @@ a {
     justify-content: center;
     height: 300px;
     padding: 50px;
-    background: #f0f0f0;
+    background: white;
   }
 
   .product-tumb img {
