--- a/src/styles/category.css
+++ b/src/styles/category.css
@@ -17,10 +17,10 @@
 }
 
 .single-category {
-  background-color: orange;
+  /* background-color: orange; */
   border-radius: 50%;
-  width: 170px;
-  height: 170px;
+  width: 200px;
+  height: 200px;
   display: flex;
   justify-content: center;
   margin: 10px;
@@ -33,7 +33,7 @@
 
 .single-category:hover {
   transform: scale(1.1);
-  box-shadow: 2px 2px 60px -10px black;
+  box-shadow: 2px 2px 15px -10px black;
 }
 
 .category-comp-titles {
@@ -41,4 +41,119 @@
   position: absolute;
   top: 70px;
   color: white;
+}
+
+/* //gender */
+@media screen and (min-width: 320px) {
+  .single-gender {
+    /* background-color: orange; */
+    /* border-radius: 50%; */
+    width: 483px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    /* margin: 40px; */
+    align-items: center;
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    transition: all 0.2s ease-in-out;
+  }
+  .single-gender:hover {
+    transform: scale(1.1);
+    box-shadow: 2px 2px 60px -10px black;
+  }
+
+  .gender-comp-titles {
+    list-style: none;
+    position: absolute;
+    top: 70px;
+    color: white;
+  }
+
+  .gender-comp-image {
+    width: 700;
+  }
+}
+@media screen and (min-width: 641px) {
+  .single-gender {
+    /* background-color: orange; */
+    /* border-radius: 50%; */
+    width: 570px;
+    height: 570px;
+    display: flex;
+    justify-content: center;
+    margin: 40px;
+    align-items: center;
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    transition: all 0.2s ease-in-out;
+  }
+  .single-gender:hover {
+    transform: scale(1.1);
+    box-shadow: 2px 2px 60px -10px black;
+  }
+
+  .gender-comp-titles {
+    list-style: none;
+    position: absolute;
+    top: 70px;
+    color: white;
+  }
+
+  .gender-comp-image {
+    width: 700;
+  }
+}
+@media screen and (min-width: 1025px) {
+  .single-gender {
+    /* background-color: orange; */
+    /* border-radius: 50%; */
+    width: 570px;
+    height: 570px;
+    display: flex;
+    justify-content: center;
+    margin: 40px;
+    align-items: center;
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    transition: all 0.2s ease-in-out;
+  }
+  .single-gender:hover {
+    transform: scale(1.1);
+    box-shadow: 2px 2px 60px -10px black;
+  }
+
+  .gender-comp-titles {
+    list-style: none;
+    position: absolute;
+    top: 70px;
+    color: white;
+  }
+
+  .gender-comp-image {
+    width: 700;
+  }
+}
+
+.single-brand {
+  width: 170px;
+  height: 170px;
+  display: flex;
+  border-radius: 50%;
+
+  justify-content: center;
+  margin: 10px;
+  align-items: center;
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+.single-brand:hover {
+  transform: scale(1.1);
+  box-shadow: 2px 2px 9px -10px black;
 }
